dev/configure-ts-build - added a tsc build script and target folder for compiled .js

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 node_modules
-frontend/js-module/dijit
-frontend/js-module/dojo
-frontend/js-module/dojox
-mocks
+dijit
+dojo
+dojox
+frontend/static/src
