--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "moduleResolution": "node",
     "baseUrl": "./",
     "noEmitOnError": true,
-    "outDir": "frontend/static"
+    "outDir": "frontend/static/src"
   },
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
