--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf ./frontend/static/src; tsc --diagnostics; cp -R ./src/js-module/templates ./frontend/static/src/templates"
+    "build": "rm -rf ./frontend/static; tsc --diagnostics; cp -R ./src/js-module/templates ./frontend/static/templates; ./scripts/get-dojo.sh; mv dojo frontend/static; mv dijit frontend/static; mv dojox frontend/static; cp src/js-module/index.html frontend/static/index.html"
   },
   "repository": {
     "type": "git",
