--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "moduleResolution": "node",
     "baseUrl": "./",
     "noEmitOnError": true,
-    "outDir": "frontend/static/src"
+    "outDir": "frontend/static"
   },
   "include": ["./src/ts-module/**/*.ts", "./src/ts-module/**/*.tsx"],
   "exclude": ["node_modules"]
