--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "baseUrl": "./",
     "noEmitOnError": true,
     "outDir": "frontend/static",
-    "target": "ES3"
+    "target": "ES3",
+    "noImplicitAny": true
   },
   "include": ["./src/ts-module/**/*.ts", "./src/ts-module/**/*.tsx"],
   "exclude": ["node_modules"]
