--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "noEmitOnError": true,
     "outDir": "frontend/static",
     "target": "ES3",
+    "esModuleInterop": true
   },
   "include": ["./src/ts-module/**/*.ts", "./src/ts-module/**/*.tsx"],
   "exclude": ["node_modules"]
