--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf ./frontend/static; tsc --diagnostics; cp -R ./src/js-module/templates ./frontend/static/templates; ./scripts/get-dojo.sh; mv dojo frontend/static; mv dijit frontend/static; mv dojox frontend/static; cp src/js-module/index.html frontend/static/index.html",
+    "build-adv": "rm -rf ./frontend/static; tsc --diagnostics; cp -R ./src/js-module/templates ./frontend/static/templates; ./scripts/get-dojo.sh; mv dojo frontend/static; mv dijit frontend/static; mv dojox frontend/static; cp src/ts-adv-adoption/index.html frontend/static/index.html",
     "compile": "rm -rf ./frontend/static/*; tsc --diagnostics",
     "diagnostics": "./scripts/diagnostic.sh",
     "test-diagnostics": "./scripts/diagnostic.sh --debug",
